[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flosh"
version = "0.0.1"
authors = [
    {name="maxschloegel", email="maxschloegel@gmx.net"},
]
description = "A light package for CLI-commands displaying stackoverflow answers to given query."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["flosh"]

[project.urls]
"Homepage" = "https://github.com/maxschloegel/flosh"
"Bug Tracker" = "https://github.com/maxschloegel/flosh/issues"

